Adjusted spacing on blog posts body and fixed issues with inline code not wrapping

--- a/src/styles/code.scss
+++ b/src/styles/code.scss
@@ -142,6 +142,4 @@
   background-color: var(--clr-surface-1);
   border: 1px solid var(--clr-surface-2);
   border-radius: 3pt;
-
-  white-space: nowrap;
 }
